--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,45 @@ exclude = [
 	"example/*",
 ]
 
+# A short blurb about the package. This is not rendered in any format when
+# uploaded to crates.io (aka this is not markdown).
+description = "Filters npm audit output for use in CI"
+
+# These URLs point to more information about the package. These are
+# intended to be webviews of the relevant data, not necessarily compatible
+# with VCS tools and the like.
+documentation = "https://github.com/mozilla-services/audit-filter"
+homepage = "https://github.com/mozilla-services/audit-filter"
+repository = "https://github.com/mozilla-services/audit-filter"
+
+# This points to a file under the package root (relative to this `Cargo.toml`).
+# The contents of this file are stored and indexed in the registry.
+# crates.io will render this file and place the result on the crate's page.
+readme = "README.md"
+
+# This is a list of up to five keywords that describe this crate. Keywords
+# are searchable on crates.io, and you may choose any words that would
+# help someone find this crate.
+keywords = []
+
+# This is a list of up to five categories where this crate would fit.
+# Categories are a fixed list available at crates.io/category_slugs, and
+# they must match exactly.
+categories = []
+
+# This is an SPDX 2.1 license expression for this package.  Currently
+# crates.io will validate the license provided against a whitelist of
+# known license and exception identifiers from the SPDX license list
+# 2.4.  Parentheses are not currently supported.
+#
+# Multiple licenses can be separated with a `/`, although that usage
+# is deprecated.  Instead, use a license expression with AND and OR
+# operators to get more explicit semantics.
+license = "MPL2"
+
+[badges]
+travis-ci = { repository = "mozilla-services/audit-filter", branch = "master" }
+
 [dependencies]
 serde_json = "1.0.27"
 serde = "1.0.79"
