--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
     env: TARGET=x86_64-unknown-linux-musl
 before_script:
   - rustup component add clippy-preview
-  - rustup target add $TARGET
+  - (rustup toolchain list | grep $TARGET) || rustup target add $TARGET
 script:
   # if you want the build job to fail when encountering warnings, use
   - cargo clippy -- -D warnings
