--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,7 @@ serde = "1.0.79"
 serde_derive = "1.0.79"
 docopt = "1.0.1"
 failure = "0.1.2"
+wasm-bindgen = "0.2"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
