--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 before_script:
   - curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=$TRAVIS_RUST_VERSION -y
   - source $HOME/.cargo/env
-  - rustup component add clippy-preview
+  - rustup component add clippy
   - rustup target add wasm32-unknown-unknown
   - cargo install wasm-pack
 script:
