--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "moment": "2.19.2"
+    "moment": "2.19.2",
+    "restify": "7.0.0"
   },
   "devDependencies": {
     "audit-filter": "0.3.0",
