--- a/pkg/package.json
+++ b/pkg/package.json
@@ -4,7 +4,7 @@
     "Greg Guthe <gguthe@mozilla.com>"
   ],
   "description": "Filters npm audit output for use in CI",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
@@ -13,8 +13,10 @@
   "bin": "cli.js",
   "files": [
     "audit_filter_bg.wasm",
-    "audit_filter_bg.js",
+    "audit_filter.js",
     "audit_filter.d.ts",
+    "audit_filter_bg.js",
+    "audit_filter_bg.d.ts",
     "cli.js"
   ],
   "main": "audit_filter.js",
