--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "audit-filter"
-version = "0.5.0"
+name = "audit-exclude"
+version = "0.6.0"
 authors = ["Greg Guthe <gguthe@mozilla.com>"]
 exclude = [
 	"tests/fixtures/*",
@@ -18,9 +18,9 @@ description = "Filters npm audit output for use in CI"
 # These URLs point to more information about the package. These are
 # intended to be webviews of the relevant data, not necessarily compatible
 # with VCS tools and the like.
-documentation = "https://github.com/mozilla-services/audit-filter"
-homepage = "https://github.com/mozilla-services/audit-filter"
-repository = "https://github.com/mozilla-services/audit-filter"
+documentation = "https://github.com/IJuanI/audit-exclude"
+homepage = "https://github.com/IJuanI/audit-exclude"
+repository = "https://github.com/IJuanI/audit-exclude"
 
 # This points to a file under the package root (relative to this `Cargo.toml`).
 # The contents of this file are stored and indexed in the registry.
@@ -46,9 +46,6 @@ categories = []
 # is deprecated.  Instead, use a license expression with AND and OR
 # operators to get more explicit semantics.
 license = "MPL-2.0"
-
-[badges]
-travis-ci = { repository = "mozilla-services/audit-filter", branch = "master" }
 
 [dependencies]
 serde_json = "1.0.68"
