chore: prepare for publish

--- a/pkg/package.json
+++ b/pkg/package.json
@@ -10,20 +10,12 @@
     "type": "git",
     "url": "https://github.com/IJuanI/audit-exclude"
   },
-  "bin": "cli.js",
   "files": [
     "audit_exclude_bg.wasm",
     "audit_exclude.js",
-    "audit_exclude.d.ts",
-    "cli.js"
+    "audit_exclude.d.ts"
   ],
   "main": "audit_exclude.js",
-  "dependencies": {
-    "docopt": "^0.6.2"
-  },
   "homepage": "https://github.com/IJuanI/audit-exclude",
-  "types": "audit_exclude.d.ts",
-  "engines": {
-    "node": ">=12"
-  }
+  "types": "audit_exclude.d.ts"
 }
